--- a/index.html
+++ b/index.html
@@ -43,45 +43,9 @@
         </li>
     </ul>
 
-    <!--Задание #2 -->
-    <ul id="ingredients"></ul>
-
-    <!--Задание #3 -->
-    <ul class="gallery"></ul>
-
-    <!--Задание #4 -->
-    <div id="counter">
-        <button type="button" data-action="decrement">-1</button>
-        <span id="value">0</span>
-        <button type="button" data-action="increment">+1</button>
-    </div>
-
-    <!--Задание #5 -->
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
-
-
-    <!--Задание #6 -->
-    <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
-
-    <!--Задание #7 -->
-    <input id="font-size-control" type="range" />
-    <br />
-    <span id="text">Абракадабра!</span>
-
-    <!--Задание #8 -->
-    <div id="controls">
-        <input type="number" min="0" max="100" step="1" />
-        <button type="button" data-action="render">Создать</button>
-        <button type="button" data-action="destroy">Очистить</button>
-    </div>
-
-    <div id="boxes"></div>
-
-    <ul id="ingredients"></ul>
-    <!-- контент -->
-    <script type="module" src="js/task-1.js"></script>
-    <script type="module" src="js/task-2.js"></script>
+        <!-- контент -->
+    <script type="module" src="./js/task-1.js"></script>
+    <!-- <script type="module" src="js/task-2.js"></script> -->
     <!-- <script type="module" src="js/task-7_3.js"></script>
     <script type="module" src="js/task-7_4.js"></script>
     <script type="module" src="js/task-7_5.js"></script>
