--- a/index.html
+++ b/index.html
@@ -3,55 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java Script is fun 7</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <!-- Задание #1 -->
-    <ul id="categories">
-        <li class="item">
-            <h2>Животные</h2>
-
-            <ul>
-                <li>Кот</li>
-                <li>Хомяк</li>
-                <li>Лошадь</li>
-                <li>Попугай</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Продукты</h2>
-
-            <ul>
-                <li>Хлеб</li>
-                <li>Петрушка</li>
-                <li>Творог</li>
-            </ul>
-        </li>
-        <li class="item">
-            <h2>Технологии</h2>
-
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node</li>
-            </ul>
-        </li>
+    <ul>
+        <li><a href="./task-1.html">Task-1</a></li>
+        <li><a href="./task-2.html">Task-2</a></li>
+        <li><a href="./task-3.html">Task-3</a></li>
+        <li><a href="./task-4.html">Task-4</a></li>
+        <li><a href="./task-5.html">Task-5</a></li>
+        <li><a href="./task-6.html">Task-6</a></li>
+        <li><a href="./task-7.html">Task-7</a></li>
+        <li><a href="./task-8.html">Task-8</a></li>
     </ul>
 
-        <!-- контент -->
-    <script type="module" src="./js/task-1.js"></script>
-    <!-- <script type="module" src="js/task-2.js"></script> -->
-    <!-- <script type="module" src="js/task-7_3.js"></script>
-    <script type="module" src="js/task-7_4.js"></script>
-    <script type="module" src="js/task-7_5.js"></script>
-    <script type="module" src="js/task-7_6.js"></script>
-    <script type="module" src="js/task-7_7.js"></script> -->
-    <!--<script type="module" src="js/task-7_8.js"></script>-->
 </body>
 
 </html>
